--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@
 .service-item {
     box-shadow: 0 0 45px rgba(0, 0, 0, 0.08);
     transition: 0.5s;
+    min-height: 280px;
 }
 
 .service-item:hover {
